working on docs, crc and minikube deploy

--- a/kubernetes/akka-cluster-red-hat-crc.yml
+++ b/kubernetes/akka-cluster-red-hat-crc.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: akka-k8-visualizer
-          image: akka-k8-visualizer:latest
+          image: mckeeh3/akka-k8-visualizer:latest
           imagePullPolicy: Always
           readinessProbe:
             httpGet:
