--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -17,7 +17,7 @@ akka {
         discovery-method = kubernetes-api
 
         # For the kubernetes API this value is substituted into the %s in pod-label-selector
-        service-name = "simulator"
+        service-name = "visualizer"
 
         required-contact-point-nr = 2
         required-contact-point-nr = ${?REQUIRED_CONTACT_POINT_NR}
