working on docs, crc and minikube deploy

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -25,3 +25,17 @@ akka {
     }
   }
 }
+
+simulator.http.server {
+  host = "localhost"
+  host = ${?simulator_http_server_host}
+  port = 8080
+  port = ${?simulator_http_server_port}
+}
+
+visualizer.http.server {
+  host = "localhost"
+  host = ${?visualizer_http_server_host}
+  port = 8080
+  port = ${?visualizer_http_server_port}
+}
