--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,6 +11,20 @@ akka {
     }
   }
 
+  cluster {
+    split-brain-resolver {
+      stable-after = 15s # wait a few more seconds beyond the default 10s for demo purposes
+    }
+
+    sharding {
+      number-of-shards = 15
+      passivate-idle-entity-after = 15s
+      least-shard-allocation-strategy {
+        rebalance-relative-limit = 0.2 # default 0.1 - v2.6.10
+      }
+    }
+  }
+
   management {
     cluster.bootstrap {
       contact-point-discovery {
