add docs. adjust config.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,8 +12,11 @@ akka {
   }
 
   cluster {
+    # Comment this line out to disable the SBR
+    downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
+
     split-brain-resolver {
-      stable-after = 15s # wait a few more seconds beyond the default 10s for demo purposes
+      stable-after = 5s # wait a few more seconds beyond the default 10s for demo purposes
     }
 
     sharding {
